deployment/apps/app-site-ng2/service.yaml
#This is an auto generated file
kind: Service
apiVersion: v1
metadata:
  name: app-site-ng2
  namespace: preview
spec:
  # type: NodePort
  ports:
  - name: http
    port: 80
    # - protocol: TCP
    #   port: 8081
    #   targetPort: 80
    #   name: app-site-ng2
  selector:
    app: app-site-ng2
