deployment/apps/app-site-ng2/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-site-ng2
  namespace: preview
  # namespace: preview
  annotations:
    # kubernetes.io/ingress.class: "linkerd"
    kubernetes.io/ingress.class: "istio"
spec:
  backend:
    serviceName: app-site-ng2
    servicePort: http
  rules:
  - host: beamery.local
    http:
      paths:
      - backend:
          serviceName: app-site-ng2
          servicePort: http
